Feature/key value store (#1042)
* Fix async code used in ProtocolAdapterWrapper and (partly) OpcUaProtocolAdapterWrapper